tamaño y tipo de letra

--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Formulario Kunan</title>
-    <link rel="stylesheet" href="/css/assets/main.css">
+    <link rel="stylesheet" href="assets/css/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   </head>
   <body>
-    <p>Antes de iniciar la inscripción debes leer las <span id="rojo">bases del concurso</span></p>
-    <p><strong><u>Nota:</u></strong> Al finalizar el formulario encontrarás el ícono GUARDAR, el cual
+    <p class="datosIniciales">Antes de iniciar la inscripción debes leer las <span id="rojo">bases del concurso</span></p>
+    <p class="datosIniciales"><strong><u>Nota:</u></strong> Al finalizar el formulario encontrarás el ícono GUARDAR, el cual
     permitirá que puedas guardar la información ingresada si no culminaste el formulario, dándote la
     posibilidad  de entras cuando necesites concretar y/o editar antes de elegir el ícono ENVIAR.</p>
     <h1>Formulario de Registro</h1>
@@ -139,7 +140,7 @@
             <input type="text" name="tiempo" pattern="^([0-9])+$" min="0" max="240" value="">
             <span class="datosGenerales">Ámbito de intervención</span><br>
             <span class="datosGenerales">¿Cuáles son las regiones, provincias y distritos donde se sitúan sus operaciones a lo largo de toda la cadena del negocio </span>
-            
+
 
           </div>
 
