--- a/index.html
+++ b/index.html
@@ -140,6 +140,38 @@
             <input type="text" name="tiempo" pattern="^([0-9])+$" min="0" max="240" value="">
             <span class="datosGenerales">Ámbito de intervención</span><br>
             <span class="datosGenerales">¿Cuáles son las regiones, provincias y distritos donde se sitúan sus operaciones a lo largo de toda la cadena del negocio </span>
+            <span class="datosGenerales grisOscuro">Regiones</span><br>
+            <input type="checkbox" value="Amazonas">Amazonas<br>
+            <input type="checkbox" value="Áncash">Áncash<br>
+            <input type="checkbox" value="Apurímac">Apurímac<br>
+            <input type="checkbox" value="Arequipa">Arequipa<br>
+            <input type="checkbox" value="Ayacucho">Ayacucho<br>
+            <input type="checkbox" value="Cajamarca">Cajamarca<br>
+            <input type="checkbox" value="Callao">Callao<br>
+            <input type="checkbox" value="Cuzco">Cuzco<br>
+            <input type="checkbox" value="Huancavelica">Huancavelica<br>
+            <input type="checkbox" value="Huánuco">Huánuco<br>
+            <input type="checkbox" value="Ica">Ica<br>
+            <input type="checkbox" value="Junín">Junín<br>
+            <input type="checkbox" value="LaLibertad">La Libertad<br>
+            <input type="checkbox" value="Lambayeque">Lambayeque<br>
+            <input type="checkbox" value="Lima">Lima<br>
+            <input type="checkbox" value="Loreto">Loreto<br>
+            <input type="checkbox" value="MadreDeDios">Madre de Dios<br>
+            <input type="checkbox" value="Moquegua">Moquegua<br>
+            <input type="checkbox" value="Pasco">Pasco<br>
+            <input type="checkbox" value="Piura">Piura<br>
+            <input type="checkbox" value="Puno">Puno<br>
+            <input type="checkbox" value="SanMartin">San Martín<br>
+            <input type="checkbox" value="Tacna">Tacna<br>
+            <input type="checkbox" value="Tumbes">Tumbes<br>
+            <input type="checkbox" value="Ucayali">Ucayali<br>
+            <p class="datosGenerales grisClaro">
+              <i>Indicar las provincias en las que intervienen tu emprendimiento
+              respecto a las regiones marcadas anteriormente</i>
+            </p>
+
+
 
 
           </div>
